# evallab

./: .gitignore  IMPLEMENTATION.md  README.md  pyproject.toml
.github/workflows/: weekly-quality.yml
documentation/: IMPLEMENTATION.md
examples/: try_autogen_eval.py
src/agent_eval/: __init__.py
src/agent_eval/cli/: main.py
src/agent_eval/core/: __init__.py  exceptions.py  models.py  protocols.py  score.py
src/agent_eval/pipeline/: __init__.py  batch.py  comparison.py  runner.py
src/agent_eval/reporting/: html.py  json_report.py  text.py
src/agent_eval/rewards/: __init__.py  aggregators.py  composite.py
src/agent_eval/rl/: __init__.py  data_models.py  dspy_bridge.py  reward_server.py  trl_bridge.py  tuning_loop.py
src/agent_eval/scorers/: registry.py
src/agent_eval/utils/: __init__.py  embeddings.py
tests/: conftest.py
tests/adapters/autogen/: test_adapter.py  test_adapter_flexibility.py  test_event_parser.py  test_logger.py  test_tool_failure.py
tests/cli/: test_evaluate_cmd.py  test_serve_cmd.py
tests/core/: test_models.py  test_score.py
tests/fixtures/: sample_autogen_events.json  sample_autogen_events.jsonl  sample_langgraph_trace.json  sample_otel_trace.json
tests/pipeline/: test_batch.py  test_comparison.py  test_runner.py
tests/reporting/: test_html.py
tests/rewards/: test_aggregators.py  test_composite.py
tests/rl/: test_data_models.py  test_dspy_bridge.py  test_reward_server.py  test_trl_bridge.py  test_tuning_loop.py
tests/scorers/: test_flexibility.py  test_registry.py
tests/utils/: test_embeddings.py
(+50 files in other folders)
